--- a/client.html
+++ b/client.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>webwing</title>
+      <title>Clients</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -38,118 +38,116 @@
       </div>
       <!-- end loader -->
       <!-- header -->
-      <header>
-         <!-- header inner -->
-         <div class="header">
-            <div class="header_to d_none">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-6 col-sm-6">
-                        <ul class="lan">
-                           <li><i class="fa fa-globe" aria-hidden="true"></i> Language : <img src="images/fleg.png" alt="#"/></li>
-                        </ul>
-                        <form action="#" >
-                           <div class="select-box">
-                              <label for="select-box1" class="label select-box1"><span class="label-desc">English</span> </label>
-                              <select id="select-box1" class="select">
-                                 <option value="Choice 1">English</option>
-                                 <option value="Choice 1">Falkla</option>
-                                 <option value="Choice 2">Germa</option>
-                                 <option value="Choice 3">Neverl</option>
-                              </select>
-                           </div>
-                        </form>
-                     </div>
-                     <div class="col-md-6 col-sm-6 ">
-                        <ul class="social_icon1">
-                           <li> F0llow Us
-                           </li>
-                           <li> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
-                              </a>
-                           </li>
-                           <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                           <li> <a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                           <li> <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
+      <div class="header">
+         <div class="header_to d_none">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-6 col-sm-6">
+                     <ul class="lan">
+                        <li><i class="fa fa-globe" aria-hidden="true"></i> Language : <img src="images/fleg.png" alt="#" /></li>
+                     </ul>
+                     <form action="#">
+                        <div class="select-box">
+                           <label for="select-box1" class="label select-box1"><span class="label-desc">English</span> </label>
+                           <select id="select-box1" class="select">
+                              <option value="Choice 1">English</option>
+                              <option value="Choice 1">Falkla</option>
+                              <option value="Choice 2">Germa</option>
+                              <option value="Choice 3">Neverl</option>
+                           </select>
+                        </div>
+                     </form>
                   </div>
-               </div>
-            </div>
-            <div class="header_midil">
-               <div class="container">
-                  <div class="row d_flex">
-                     <div class="col-md-4 col-sm-4 d_none">
-                        <ul class="conta_icon">
-                           <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +01 1234567890</a> </li>
-                        </ul>
-                     </div>
-                     <div class="col-md-4 col-sm-4 " >
-                        <a class="logo" href="#"><img src="images/logo.png" alt="#"/></a>
-                     </div>
-                     <div class="col-md-4 col-sm-4 d_none">
-                        <ul class="conta_icon ">
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> demo@gmail.com</a> </li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="header_bo">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-9 col-sm-7">
-                        <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                           <span class="navbar-toggler-icon"></span>
-                           </button>
-                           <div class="collapse navbar-collapse" id="navbarsExample04">
-                              <ul class="navbar-nav mr-auto">
-                                 <li class="nav-item ">
-                                    <a class="nav-link" href="index.html"> Home  </a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">about</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">services</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="team.html">team </a>
-                                 </li>
-                                 <li class="nav-item active">
-                                    <a class="nav-link" href="client.html">Clients</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html"> contact us </a>
-                                 </li>
-                              </ul>
-                           </div>
-                        </nav>
-                     </div>
-                     <div class="col-md-3 col-sm-5 d_none">
-                        <ul class="sign">
-                           <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                           <li><a class="sign_btn" href="#">sign up now</a></li>
-                        </ul>
-                     </div>
+                  <div class="col-md-6 col-sm-6 ">
+                     <ul class="social_icon1">
+                        <li> F0llow Us
+                        </li>
+                        <li> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
+                           </a>
+                        </li>
+                        <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li> <a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li> <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+                           </a>
+                        </li>
+                     </ul>
                   </div>
                </div>
             </div>
          </div>
-      </header>
+         <div class="header_midil">
+            <div class="container">
+               <div class="row d_flex">
+                  <div class="col-md-4 col-sm-4 d_none">
+                     <ul class="conta_icon">
+                        <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +233 55-984-6211</a> </li>
+                     </ul>
+                  </div>
+                  <div class="col-md-4 col-sm-4 ">
+                     <!---I'll change the logo "WEBVIEWING" to ANDELE LOGO--->
+                  </div>
+                  <div class="col-md-4 col-sm-4 d_none">
+                     <ul class="conta_icon ">
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> salamigideon01@gmail.com</a> </li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="header_bo">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-9 col-sm-7">
+                     <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                           <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarsExample04">
+                           <ul class="navbar-nav mr-auto">
+                              <li class="nav-item active">
+                                 <a class="nav-link" href="index.html"> Home </a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="about.html">about</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="service.html">services</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="team.html">team </a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="client.html">Clients</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="contact.html"> contact us </a>
+                              </li>
+                           </ul>
+                        </div>
+                     </nav>
+                  </div>
+                  <div class="col-md-3 col-sm-5 d_none">
+                     <ul class="sign">
+                        <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                        <li><a class="sign_btn" href="#">sign up now</a></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </header>
       <!-- end header inner -->
       <!-- end header -->
       <!-- banner -->
      
       <!-- testimonial -->
-      <div id="client"  class="testimonial">
+      <div id="client" class="testimonial">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2><strong class="yellow">testimonial</strong><br>What is Syas our clients</h2>
+                     <h2><strong class="yellow">testimonial</strong><br>Feedbacks from our clients</h2>
                   </div>
                </div>
             </div>
@@ -167,8 +165,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>An fantastic resource for any risk practitioner, whether as a manual for controlling risks at work or as supplemental reading for exams.</p>
+                                 <i><img src="images/client1.jpeg" alt="#" /></i> <span>Modlin Afari</span>
                               </div>
                            </div>
                         </div>
@@ -181,8 +179,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>An excellent companion for any risk practitioner either as a guide for managing risks in the office or a companion as additional reading for examination</p>
+                                 <i><img src="images/client2.jpeg" alt="#" /></i> <span>Lisa Shika</span>
                               </div>
                            </div>
                         </div>
@@ -195,8 +193,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>Excellent as a reference for risk management in the workplace or as supplemental reading for exams, this book is a great companion for any risk practitioner.</p>
+                                 <i><img src="images/cos.jpg" alt="#" /></i> <span>Samuel Huston</span>
                               </div>
                            </div>
                         </div>
@@ -205,64 +203,63 @@
                </div>
             </div>
             <a class="carousel-control-prev" href="#testimo" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+               <i class="fa fa-chevron-left" aria-hidden="true"></i>
             </a>
             <a class="carousel-control-next" href="#testimo" role="button" data-slide="next">
-            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+               <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
          </div>
       </div>
       <!-- end testimonial -->
     
       <!--  footer -->
-      <footer >
+      <footer>
          <div class="footer">
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <a class="logo2" href="#"><img src="images/loogo2.png" alt="#"/></a>
                   </div>
                   <div class="col-lg-5 col-md-6 col-sm-6">
                      <h3>Contact Us</h3>
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> London 145
-                           <br> United Kingdom 
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a>Accra
+                           <br> Tema
                         </li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com<br> demo@gmail.com</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+01 1234567890<br>+01 1234567889</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>salamigideon01@gmail.com<br> baafik@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+233 551298222<br>+233 559846211</li>
                      </ul>
                      <ul class="social_icon">
                         <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                         <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li> <a href="#">   <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li> <a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-6">
                      <h3>Menus</h3>
                      <ul class="link_icon">
-                        <li > <a href="index.html"> Home</a></li>
+                        <li class="active"> <a href="index.html"> Home</a></li>
                         <li>
                            <a href="about.html">
-                              </i>About Us  
+                              </i>About Us
                         </li>
                         <li> <a href="service.html"> </i>Services</a></li>
-                         <li> <a href="team.html"></i>Team</a></li>
-                        <li class="active"> <a href="client.html"></i>Clients</a></li>
+                        <li> <a href="team.html"></i>Team</a></li>
+                        <li> <a href="client.html"></i>Clients</a></li>
                         <li> <a href="contact.html"></i>Contact us</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-6">
                      <h3>Recent Post</h3>
                      <ul class="link_icon">
-                        <li > <a href="#"> Participate in staff </a></li>
+                        <li> <a href="#"> Join US </a></li>
                         <li>
                            <a href="#">
-                              meetings manage 
+                              meetings manage
                         </li>
                         <li> <a href="#"> dedicated to </a></li>
-                        <li> <a href="#"> marketing</a></li>
-                        <li> <a href="#"> November 25, 2019</a></li>
+                        <li> <a href="#"> Blockchain</a></li>
+                        <li> <a href="#"> November, 2022</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6">
@@ -270,7 +267,7 @@
                      <form id="request" class="main_form">
                         <div class="row">
                            <div class="col-md-12 ">
-                              <input class="news" placeholder="Your Email" type="type" name="Your Email"> 
+                              <input class="news" placeholder="Your Email" type="type" name="Your Email">
                            </div>
                            <div class="col-md-12">
                               <button class="send_btn">Send</button>
@@ -284,7 +281,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved.<a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>© 2022 All Rights Reserved.<a href="https://andele.agsi-gh.com/"> ANDELE</a></p>
                      </div>
                   </div>
                </div>
