sign up page linked to all pages

--- a/client.html
+++ b/client.html
@@ -129,7 +129,7 @@
                   <div class="col-md-3 col-sm-5 d_none">
                      <ul class="sign">
                         <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                        <li><a class="sign_btn" href="#">sign up now</a></li>
+                        <li><a class="sign_btn" href="sign1/sign1.html">sign up now</a></li>
                      </ul>
                   </div>
                </div>
