--- a/service.html
+++ b/service.html
@@ -84,7 +84,6 @@
                      </ul>
                   </div>
                   <div class="col-md-4 col-sm-4 ">
-                     <!---I'll change the logo "WEBVIEWING" to ANDELE LOGO--->
                   </div>
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon ">
@@ -129,7 +128,7 @@
                   <div class="col-md-3 col-sm-5 d_none">
                      <ul class="sign">
                         <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                        <li><a class="sign_btn" href="#">sign up now</a></li>
+                        <li><a class="sign_btn" href="sign1/sign1.html">sign up now</a></li>
                      </ul>
                   </div>
                </div>
