--- a/about.html
+++ b/about.html
@@ -86,7 +86,6 @@
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 ">
-                        <!---I'll change the logo "WEBVIEWING" to ANDELE LOGO--->
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
@@ -131,7 +130,7 @@
                      <div class="col-md-3 col-sm-5 d_none">
                         <ul class="sign">
                            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                           <li><a class="sign_btn" href="#">sign up now</a></li>
+                           <li><a class="sign_btn" href="sign1/sign1.html">sign up now</a></li>
                         </ul>
                      </div>
                   </div>
@@ -160,7 +159,6 @@
                </div>
                <div class="col-md-12 col-lg-5">
                   <div class="about_img">
-                     <!---Image would be replaced with team ANDELE-->
                      <figure><img src="images/bas_ing.png" alt="#" /></figure>
                   </div>
                </div>
