--- a/sign1/sign1.html
+++ b/sign1/sign1.html
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div>
-                           <button class="btn btn--radius-2 btn--red" type="submit">Continue</button>
+                           <button class="btn btn--radius-2 btn--red" type="submit">SignUp</button>
                         </div>
                     </form>
                 </div>
